--- a/WhatsForDinner/app/src/main/res/layout/activity_home.xml
+++ b/WhatsForDinner/app/src/main/res/layout/activity_home.xml
@@ -18,8 +18,8 @@
         <ImageView
             android:id="@+id/Banner"
             android:layout_width="wrap_content"
-            android:layout_weight="1.3"
-            android:layout_height="240dp"
+            android:layout_weight="2"
+            android:layout_height="340dp"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/image1"
             android:onClick="bannerPopUp"/>
@@ -40,7 +40,8 @@
 
                     <ImageButton
                         android:id="@+id/meals_button"
-                        android:layout_height="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_width="150dp"
                         android:layout_weight="1"
                         android:background="@null"
                         android:scaleType="fitCenter"
@@ -50,8 +51,9 @@
 
                     <ImageButton
                         android:id="@+id/receipe_button"
+                        android:layout_height="150dp"
+                        android:layout_width="150dp"
                         android:layout_weight="1"
-                        android:layout_height="match_parent"
                         android:background="@null"
                         android:scaleType="fitCenter"
                         android:theme="@style/Widget.AppCompat.Button.Borderless"
@@ -88,8 +90,9 @@
 
                     <ImageButton
                         android:id="@+id/meals_button3"
-                        android:layout_height="170dp"
+                        android:layout_height="150dp"
                         android:layout_weight="1"
+                        android:layout_width="150dp"
                         android:background="@null"
                         android:scaleType="fitCenter"
                         android:theme="@style/Widget.AppCompat.Button.Borderless"
@@ -98,8 +101,9 @@
 
                     <ImageButton
                         android:id="@+id/meals_button4"
-                        android:layout_height="170dp"
+                        android:layout_height="150dp"
                         android:layout_weight="1"
+                        android:layout_width="150dp"
                         android:background="@null"
                         android:scaleType="fitCenter"
                         android:theme="@style/Widget.AppCompat.Button.Borderless"
