--- a/WhatsForDinner/app/src/main/res/layout/activity_meals.xml
+++ b/WhatsForDinner/app/src/main/res/layout/activity_meals.xml
@@ -6,4 +6,122 @@
     android:layout_height="match_parent"
     tools:context="edu.sjsu.ajay.whatsfordinner.MealsActivity">
 
+    <RelativeLayout
+        android:id="@+id/parent_relative_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/days"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MONDAY"
+            android:textSize="@dimen/days"
+            android:layout_marginTop="70dp"
+            android:textAlignment="center"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+        />
+
+        <Button
+            android:layout_below="@+id/days"
+            android:id="@+id/previous_day"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Previous"
+            android:layout_height="wrap_content"
+            android:onClick="previousClicked"/>
+
+        <Button
+            android:layout_below="@+id/days"
+            android:layout_toRightOf="@+id/previous_day"
+            android:id="@+id/next_day"
+            android:layout_marginLeft="175dp"
+            android:layout_width="wrap_content"
+            android:text="Next"
+            android:layout_height="wrap_content"
+            android:onClick="nextClicked"/>
+
+
+        <RelativeLayout
+            android:id="@+id/meals_for_day"
+            android:layout_below="@id/previous_day"
+            android:layout_marginTop="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/breakfast"
+                android:layout_width="110dp"
+                android:text="Breakfast"
+                android:layout_marginLeft="20dp"
+                android:textSize="@dimen/meals"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/breakfast_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/breakfast"
+                android:layout_marginLeft="70dp"/>
+
+            <TextView
+                android:id="@+id/lunch"
+                android:layout_below="@id/breakfast"
+                android:layout_width="110dp"
+                android:text="Lunch"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="@dimen/meals"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/lunch_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/lunch"
+                android:layout_below="@id/breakfast"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="70dp"/>
+
+
+            <TextView
+                android:id="@+id/dinner"
+                android:layout_below="@id/lunch"
+                android:layout_width="110dp"
+                android:text="Dinner"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="@dimen/meals"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:id="@+id/dinner_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/dinner"
+                android:layout_below="@id/lunch"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="70dp"/>
+
+
+        </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/meals_for_day"
+            android:text="SAVE"
+            android:background="@color/BLACKCOLOR"
+            android:textColor="@color/WHITECOLOR"
+            android:textSize="@dimen/fab_margin"
+            android:layout_marginTop="50dp"
+            android:onClick="saveMeal"
+            />
+
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
