--- a/WhatsForDinner/app/src/main/res/layout-land/activity_recipe.xml
+++ b/WhatsForDinner/app/src/main/res/layout-land/activity_recipe.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/recipes_layout_portrait"
     android:layout_height="match_parent"
+    android:id="@+id/recipes_layout_land"
     tools:context="edu.sjsu.ajay.whatsfordinner.RecipeActivity">
 
 
